...
    "Activity Log Help" : {
      "comment" : "Help link"
    },
    "Activity may contain feed URLs and other information you may not want to share publicly." : {
      "comment" : "Activity log privacy warning"
    },
    "Add" : {
      "comment" : "Add button"
    },
    "Add ${url} to ${accountName}" : {

    },
    "Add Account" : {
...
    "Can’t add this feed because you’ve already added it in %@." : {
      "comment" : "Feed finder"
    },
    "Can’t add this feed because you’ve already added it." : {
      "comment" : "Feed finder"
    },
    "Cancel" : {
      "comment" : "Cancel button",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancelar"
...
    "NetNewsWire will use your iCloud account to sync your subscriptions across your Mac and iOS devices." : {
      "comment" : "iCloud"
    },
    "Network error. Try again later." : {
      "comment" : "Credentials Error"
    },
    "New Article Notifications" : {
      "comment" : "New Article Notifications"
    },
    "New Feed" : {
      "comment" : "Command"
    },
    "New Feed…" : {
...
